--- a/src/roles/3-etcd/tasks/main.yml
+++ b/src/roles/3-etcd/tasks/main.yml
@@ -31,7 +31,7 @@
 
 # 证书准备
 - name: Copy ca file
-  copy: src={{ cfssl_out_dir }}/ca/{{ item }} dest={{ ca_dir }}/{{ item }} mode=0644
+  copy: src={{ cfssl_out_dir }}/{{ item }} dest={{ ca_dir }}/{{ item }} mode=0644
   with_items:
     - ca-key.pem
     - ca.pem
@@ -40,7 +40,7 @@
     - etcd
 
 - name: Copy etcd certificate file
-  copy: src={{ cfssl_out_dir }}/etcd/{{ item }} dest={{ etcd_ca_dir }}/{{ item }} mode=0644
+  copy: src={{ cfssl_out_dir }}/{{ item }} dest={{ etcd_ca_dir }}/{{ item }} mode=0644
   with_items:
     - etcd-key.pem
     - etcd.pem
