--- a/src/roles/7-kube-node/tasks/calico.yml
+++ b/src/roles/7-kube-node/tasks/calico.yml
@@ -16,7 +16,7 @@
 
 
 - name: Copy ca file
-  copy: src={{ cfssl_out_dir }}/ca/{{ item }} dest=/etc/calico/ssl/{{ item }} mode=0644
+  copy: src={{ cfssl_out_dir }}/{{ item }} dest=/etc/calico/ssl/{{ item }} mode=0644
   with_items:
     - ca-key.pem
     - ca.pem
@@ -26,7 +26,7 @@
 
 
 - name: Copy etcd certificate file
-  copy: src={{ cfssl_out_dir }}/etcd/{{ item }} dest=/etc/calico/ssl/{{ item }} mode=0644
+  copy: src={{ cfssl_out_dir }}/{{ item }} dest=/etc/calico/ssl/{{ item }} mode=0644
   with_items:
     - etcd-key.pem
     - etcd.pem
