1. 增加缺失的生成证书的脚本， 2.更新时间同步服务器

--- a/src/inventory/inventory.cfg
+++ b/src/inventory/inventory.cfg
@@ -67,7 +67,7 @@ base_dir="/etc/ansible"
 
 
 # ===================================================================================================================
-ntp_server="cn.ntp.org.cn"
+ntp_server="0.cn.pool.ntp.org"
 
 
 cfssl_bin_dir="{{ playbook_dir }}/roles/2-ca/bin"
