--- a/src/roles/5-kube-cluster/tasks/sysctl.yml
+++ b/src/roles/5-kube-cluster/tasks/sysctl.yml
@@ -12,6 +12,7 @@
 
 - name: load modprobe
   command: modprobe br_netfilter
+  ignore_errors: yes
 
 - name: Sysctl apply
   shell: sysctl -p /etc/sysctl.d/k8s.conf
